<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="23dp"
    android:orientation="vertical"
    android:id="@+id/onboarding_fragment"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">
        <ImageView
            android:id="@+id/onboarding_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_image">

        <TextView
            android:id="@+id/property_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:textAlignment="center"
            android:textColor="@color/blue_text_color"
            android:textSize="@dimen/_23ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/queue_2_1_description" />

        <TextView
            android:id="@+id/description_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:textAlignment="center"
            android:textColor="@color/black_color_light"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/property_textview"
            tools:text="@string/queue_2_2_description" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45ssp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/sign_up"
            app:cornerRadius="4.69dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_textview"
            app:strokeColor="@color/blue_text_color" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/skip_btn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_50ssp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/skip"
            app:cornerRadius="4.69dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_textview"
            app:strokeColor="@color/blue_text_color" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_btn"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_50ssp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/next"
            app:cornerRadius="4.69dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_textview"
            app:strokeColor="@color/blue_text_color" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_btn">

            <TextView
                android:id="@+id/textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have"
                android:textColor="@color/gray_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialButton3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/sign_in"
                android:id="@+id/sign_in_textview"
                android:textColor="@color/blue_text_color"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/materialButton3" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
